apps/base/cadence/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cadence
  labels:
    http-ingress: "true"
