apps/base/cadence/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadence
  namespace: cadence
  labels:
    app.kubernetes.io/name: cadence
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: cadence
